--- a/rules.yaml
+++ b/rules.yaml
@@ -11,13 +11,13 @@ position_rules:
   # This group rule is ONLY active BEFORE 12:30 AM.
   - position: [Line Buster 1, Line Buster 2, Line Buster 3]
     end_time: "12:30 PM"
-    max_consecutive_slots_in_group: 2 # More lenient during the morning rush
+    max_consecutive_slots_in_group: 2 # More lenient during the morning, when it's cooler and you can have someone outside for longer if needed
 
   # This group rule is ONLY active AFTER 12:30 PM but BEFORE 7:30 PM.
   - position: [Line Buster 1, Line Buster 2, Line Buster 3]
     start_time: "12:30 AM"
     end_time: "7:30 PM"
-    max_consecutive_slots_in_group: 1 # Stricter during the rest of the day
+    max_consecutive_slots_in_group: 1 # Stricter during the rest of the day, thought if you want you can change it to be whatever hours you like
 
   # This rule is ALWAYS active.
   - position: [Handout, Expo]
